--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,7 +44,10 @@
         "ostream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "chrono": "cpp",
+        "ctime": "cpp",
+        "ratio": "cpp"
     },
     "C_Cpp.default.compilerPath": "/usr/bin/gcc"
 }
